whitespace correction

--- a/css/base.css
+++ b/css/base.css
@@ -136,7 +136,7 @@ table {
 }
 
 body {
-   background: #151719 url(../images/bg.png);
+   background: #151719 url(../images/logo_bg.png);
 	font: 15px/30px opensans-regular, sans-serif;
 	color: #838C95;
    -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
@@ -749,6 +749,3 @@ col.collapsed { padding: 0; }
 .align-right  { text-align: right; }
 .pull-left    { float: left; }
 .pull-right   { float: right; }
-
-
-
